--- a/style.css
+++ b/style.css
@@ -22,8 +22,7 @@ html {
 
 body {
   margin: 0 auto;
-  max-width: 600px;
-  _width: 391px;
+  max-width: 600px; /*?????*/
   background-image: linear-gradient(
     var(--contrast-color) 95px,
     var(--head-color) 95px
@@ -85,9 +84,16 @@ header {
   width: 0;
   height: 0;
   border-top: 30px solid var(--theme-color);
-  border-left: 300px solid #0000; /*50vh*/
-  border-right: 300px solid #0000;
+  border-left: 50vh solid #0000;
+  border-right: 50vh solid #0000;
   position: relative;
+}
+
+@media screen and (min-width: 600px) {
+  .triangle {
+    border-left: 300px solid #0000;
+    border-right: 300px solid #0000;
+  }
 }
 
 #t2 {
@@ -127,8 +133,9 @@ form {
 
 .forms {
   display: flex;
-  width: 100%;
-  justify-content: space-between;
+  _width: 100%;
+  _justify-content: space-between;
+  gap: 1rem;
 }
 
 select {
@@ -203,3 +210,12 @@ a {
   color: var(--theme-color);
   text-underline-position: under;
 }
+
+/*
+Fragen:
+
+Warum wird Screen nicht kleiner als ca. 600px?
+Warum funktioniert flex-grow bei den Dropdowns nicht?
+
+Warum sind Dreiecke im Header nicht mehr ganz in der Mitte nach 600px?
+*/
