--- a/style.css
+++ b/style.css
@@ -84,8 +84,8 @@ header {
   width: 0;
   height: 0;
   border-top: 30px solid var(--theme-color);
-  border-left: 50vh solid #0000;
-  border-right: 50vh solid #0000;
+  border-left: 50vw solid #0000;
+  border-right: 50vw solid #0000;
   position: relative;
 }
 
@@ -214,8 +214,7 @@ a {
 /*
 Fragen:
 
-Warum wird Screen nicht kleiner als ca. 600px?
+Warum wird Screen nicht kleiner als ca. 600px? -geht auch nach Änderung zu vw nicht D`:<
 Warum funktioniert flex-grow bei den Dropdowns nicht?
 
-Warum sind Dreiecke im Header nicht mehr ganz in der Mitte nach 600px?
 */
