--- a/style.css
+++ b/style.css
@@ -147,7 +147,11 @@ select {
   color: var(--theme-color);
   font-size: 0.875rem;
   padding-right: 30px;
-  _flex-grow: 1; /*??????*/
+  width: 100%;
+}
+
+.select-container {
+  flex-grow: 1;
 }
 
 @media screen and (max-width: 364px) {
